# llmsensor

./: README.md  basic.py  pyproject.toml
examples/: azure.py  basic.py  functions.py
llmonitor/: __init__.py  consumer.py  openai_utils.py  parsers.py
llmsensor/: __init__.py  consumer.py  openai_utils.py
