[tool.poetry]
name = "llmsensor"
version = "0.0.20"
description = "Observability and monitoring for AI apps"
authors = ["llmsensor <hello@llmsensor.com>"]
readme = "README.md"
repository = "https://github.com/llmsensor"
documentation = "https://github.com/llmsensor"
keywords = [
    "LLMSensor",
    "Langchain",
    "AI",
    "Analytics",
    "Monitoring"
]

[tool.poetry.dependencies]
python = "^3.8.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
openai = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
